# api/pybridge/models/__init__.py
@@ -14,5 +14,15 @@
 from __future__ import absolute_import
 
 # import models into model package
+from pybridge.models.bank import Bank
+from pybridge.models.bank_country import BankCountry
+from pybridge.models.bank_form import BankForm
 from pybridge.models.inline_response200 import InlineResponse200
+from pybridge.models.inline_response2001 import InlineResponse2001
+from pybridge.models.inline_response2002 import InlineResponse2002
+from pybridge.models.inline_response2003 import InlineResponse2003
+from pybridge.models.inline_response2004 import InlineResponse2004
+from pybridge.models.inline_response2005 import InlineResponse2005
+from pybridge.models.inline_response200_pagination import InlineResponse200Pagination
+from pybridge.models.parent_bank import ParentBank
 from pybridge.models.user import User
