# api/pybridge/models/inline_response2001.py
@@ -1,0 +1,190 @@
+# coding: utf-8
+
+"""
+    Bridge API
+
+    bridgeapi.io  # noqa: E501
+
+    OpenAPI spec version: 1.0.0
+    Generated by: https://openapi-generator.tech
+"""
+
+
+import pprint
+import re  # noqa: F401
+
+import six
+
+
+class InlineResponse2001(object):
+    """NOTE: This class is auto generated by OpenAPI Generator.
+    Ref: https://openapi-generator.tech
+
+    Do not edit the class manually.
+    """
+
+    """
+    Attributes:
+      openapi_types (dict): The key is attribute name
+                            and the value is attribute type.
+      attribute_map (dict): The key is attribute name
+                            and the value is json key in definition.
+    """
+    openapi_types = {
+        'uuid': 'str',
+        'email': 'str',
+        'resource_type': 'str',
+        'resource_url': 'str'
+    }
+
+    attribute_map = {
+        'uuid': 'uuid',
+        'email': 'email',
+        'resource_type': 'resource_type',
+        'resource_url': 'resource_url'
+    }
+
+    def __init__(self, uuid=None, email=None, resource_type=None, resource_url=None):  # noqa: E501
+        """InlineResponse2001 - a model defined in OpenAPI"""  # noqa: E501
+
+        self._uuid = None
+        self._email = None
+        self._resource_type = None
+        self._resource_url = None
+        self.discriminator = None
+
+        if uuid is not None:
+            self.uuid = uuid
+        if email is not None:
+            self.email = email
+        if resource_type is not None:
+            self.resource_type = resource_type
+        if resource_url is not None:
+            self.resource_url = resource_url
+
+    @property
+    def uuid(self):
+        """Gets the uuid of this InlineResponse2001.  # noqa: E501
+
+
+        :return: The uuid of this InlineResponse2001.  # noqa: E501
+        :rtype: str
+        """
+        return self._uuid
+
+    @uuid.setter
+    def uuid(self, uuid):
+        """Sets the uuid of this InlineResponse2001.
+
+
+        :param uuid: The uuid of this InlineResponse2001.  # noqa: E501
+        :type: str
+        """
+
+        self._uuid = uuid
+
+    @property
+    def email(self):
+        """Gets the email of this InlineResponse2001.  # noqa: E501
+
+
+        :return: The email of this InlineResponse2001.  # noqa: E501
+        :rtype: str
+        """
+        return self._email
+
+    @email.setter
+    def email(self, email):
+        """Sets the email of this InlineResponse2001.
+
+
+        :param email: The email of this InlineResponse2001.  # noqa: E501
+        :type: str
+        """
+
+        self._email = email
+
+    @property
+    def resource_type(self):
+        """Gets the resource_type of this InlineResponse2001.  # noqa: E501
+
+
+        :return: The resource_type of this InlineResponse2001.  # noqa: E501
+        :rtype: str
+        """
+        return self._resource_type
+
+    @resource_type.setter
+    def resource_type(self, resource_type):
+        """Sets the resource_type of this InlineResponse2001.
+
+
+        :param resource_type: The resource_type of this InlineResponse2001.  # noqa: E501
+        :type: str
+        """
+
+        self._resource_type = resource_type
+
+    @property
+    def resource_url(self):
+        """Gets the resource_url of this InlineResponse2001.  # noqa: E501
+
+
+        :return: The resource_url of this InlineResponse2001.  # noqa: E501
+        :rtype: str
+        """
+        return self._resource_url
+
+    @resource_url.setter
+    def resource_url(self, resource_url):
+        """Sets the resource_url of this InlineResponse2001.
+
+
+        :param resource_url: The resource_url of this InlineResponse2001.  # noqa: E501
+        :type: str
+        """
+
+        self._resource_url = resource_url
+
+    def to_dict(self):
+        """Returns the model properties as a dict"""
+        result = {}
+
+        for attr, _ in six.iteritems(self.openapi_types):
+            value = getattr(self, attr)
+            if isinstance(value, list):
+                result[attr] = list(map(
+                    lambda x: x.to_dict() if hasattr(x, "to_dict") else x,
+                    value
+                ))
+            elif hasattr(value, "to_dict"):
+                result[attr] = value.to_dict()
+            elif isinstance(value, dict):
+                result[attr] = dict(map(
+                    lambda item: (item[0], item[1].to_dict())
+                    if hasattr(item[1], "to_dict") else item,
+                    value.items()
+                ))
+            else:
+                result[attr] = value
+
+        return result
+
+    def to_str(self):
+        """Returns the string representation of the model"""
+        return pprint.pformat(self.to_dict())
+
+    def __repr__(self):
+        """For `print` and `pprint`"""
+        return self.to_str()
+
+    def __eq__(self, other):
+        """Returns true if both objects are equal"""
+        if not isinstance(other, InlineResponse2001):
+            return False
+
+        return self.__dict__ == other.__dict__
+
+    def __ne__(self, other):
+        """Returns true if both objects are not equal"""
+        return not self == other
