# api/pybridge/models/inline_response2002.py
@@ -16,7 +16,7 @@ import re  # noqa: F401
 import six
 
 
-class InlineResponse200(object):
+class InlineResponse2002(object):
     """NOTE: This class is auto generated by OpenAPI Generator.
     Ref: https://openapi-generator.tech
 
@@ -31,68 +31,68 @@ class InlineResponse200(object):
                             and the value is json key in definition.
     """
     openapi_types = {
-        'resources': 'list[User]',
-        'pagination': 'InlineResponse200Pagination'
+        'name': 'str',
+        'is_confirmed': 'bool'
     }
 
     attribute_map = {
-        'resources': 'resources',
-        'pagination': 'pagination'
+        'name': 'name',
+        'is_confirmed': 'is_confirmed'
     }
 
-    def __init__(self, resources=None, pagination=None):  # noqa: E501
-        """InlineResponse200 - a model defined in OpenAPI"""  # noqa: E501
+    def __init__(self, name=None, is_confirmed=None):  # noqa: E501
+        """InlineResponse2002 - a model defined in OpenAPI"""  # noqa: E501
 
-        self._resources = None
-        self._pagination = None
+        self._name = None
+        self._is_confirmed = None
         self.discriminator = None
 
-        if resources is not None:
-            self.resources = resources
-        if pagination is not None:
-            self.pagination = pagination
+        if name is not None:
+            self.name = name
+        if is_confirmed is not None:
+            self.is_confirmed = is_confirmed
 
     @property
-    def resources(self):
-        """Gets the resources of this InlineResponse200.  # noqa: E501
+    def name(self):
+        """Gets the name of this InlineResponse2002.  # noqa: E501
 
 
-        :return: The resources of this InlineResponse200.  # noqa: E501
-        :rtype: list[User]
+        :return: The name of this InlineResponse2002.  # noqa: E501
+        :rtype: str
         """
-        return self._resources
+        return self._name
 
-    @resources.setter
-    def resources(self, resources):
-        """Sets the resources of this InlineResponse200.
+    @name.setter
+    def name(self, name):
+        """Sets the name of this InlineResponse2002.
 
 
-        :param resources: The resources of this InlineResponse200.  # noqa: E501
-        :type: list[User]
+        :param name: The name of this InlineResponse2002.  # noqa: E501
+        :type: str
         """
 
-        self._resources = resources
+        self._name = name
 
     @property
-    def pagination(self):
-        """Gets the pagination of this InlineResponse200.  # noqa: E501
+    def is_confirmed(self):
+        """Gets the is_confirmed of this InlineResponse2002.  # noqa: E501
 
 
-        :return: The pagination of this InlineResponse200.  # noqa: E501
-        :rtype: InlineResponse200Pagination
+        :return: The is_confirmed of this InlineResponse2002.  # noqa: E501
+        :rtype: bool
         """
-        return self._pagination
+        return self._is_confirmed
 
-    @pagination.setter
-    def pagination(self, pagination):
-        """Sets the pagination of this InlineResponse200.
+    @is_confirmed.setter
+    def is_confirmed(self, is_confirmed):
+        """Sets the is_confirmed of this InlineResponse2002.
 
 
-        :param pagination: The pagination of this InlineResponse200.  # noqa: E501
-        :type: InlineResponse200Pagination
+        :param is_confirmed: The is_confirmed of this InlineResponse2002.  # noqa: E501
+        :type: bool
         """
 
-        self._pagination = pagination
+        self._is_confirmed = is_confirmed
 
     def to_dict(self):
         """Returns the model properties as a dict"""
@@ -128,7 +128,7 @@ class InlineResponse200(object):
 
     def __eq__(self, other):
         """Returns true if both objects are equal"""
-        if not isinstance(other, InlineResponse200):
+        if not isinstance(other, InlineResponse2002):
             return False
 
         return self.__dict__ == other.__dict__
