# api/pybridge/models/inline_response2003.py
@@ -16,7 +16,7 @@ import re  # noqa: F401
 import six
 
 
-class InlineResponse200(object):
+class InlineResponse2003(object):
     """NOTE: This class is auto generated by OpenAPI Generator.
     Ref: https://openapi-generator.tech
 
@@ -31,68 +31,42 @@ class InlineResponse200(object):
                             and the value is json key in definition.
     """
     openapi_types = {
-        'resources': 'list[User]',
-        'pagination': 'InlineResponse200Pagination'
+        'redirect_url': 'str'
     }
 
     attribute_map = {
-        'resources': 'resources',
-        'pagination': 'pagination'
+        'redirect_url': 'redirect_url'
     }
 
-    def __init__(self, resources=None, pagination=None):  # noqa: E501
-        """InlineResponse200 - a model defined in OpenAPI"""  # noqa: E501
+    def __init__(self, redirect_url=None):  # noqa: E501
+        """InlineResponse2003 - a model defined in OpenAPI"""  # noqa: E501
 
-        self._resources = None
-        self._pagination = None
+        self._redirect_url = None
         self.discriminator = None
 
-        if resources is not None:
-            self.resources = resources
-        if pagination is not None:
-            self.pagination = pagination
+        if redirect_url is not None:
+            self.redirect_url = redirect_url
 
     @property
-    def resources(self):
-        """Gets the resources of this InlineResponse200.  # noqa: E501
+    def redirect_url(self):
+        """Gets the redirect_url of this InlineResponse2003.  # noqa: E501
 
 
-        :return: The resources of this InlineResponse200.  # noqa: E501
-        :rtype: list[User]
+        :return: The redirect_url of this InlineResponse2003.  # noqa: E501
+        :rtype: str
         """
-        return self._resources
+        return self._redirect_url
 
-    @resources.setter
-    def resources(self, resources):
-        """Sets the resources of this InlineResponse200.
-
-
-        :param resources: The resources of this InlineResponse200.  # noqa: E501
-        :type: list[User]
-        """
-
-        self._resources = resources
-
-    @property
-    def pagination(self):
-        """Gets the pagination of this InlineResponse200.  # noqa: E501
+    @redirect_url.setter
+    def redirect_url(self, redirect_url):
+        """Sets the redirect_url of this InlineResponse2003.
 
 
-        :return: The pagination of this InlineResponse200.  # noqa: E501
-        :rtype: InlineResponse200Pagination
-        """
-        return self._pagination
-
-    @pagination.setter
-    def pagination(self, pagination):
-        """Sets the pagination of this InlineResponse200.
-
-
-        :param pagination: The pagination of this InlineResponse200.  # noqa: E501
-        :type: InlineResponse200Pagination
+        :param redirect_url: The redirect_url of this InlineResponse2003.  # noqa: E501
+        :type: str
         """
 
-        self._pagination = pagination
+        self._redirect_url = redirect_url
 
     def to_dict(self):
         """Returns the model properties as a dict"""
@@ -128,7 +102,7 @@ class InlineResponse200(object):
 
     def __eq__(self, other):
         """Returns true if both objects are equal"""
-        if not isinstance(other, InlineResponse200):
+        if not isinstance(other, InlineResponse2003):
             return False
 
         return self.__dict__ == other.__dict__
