# api/pybridge/models/inline_response2004.py
@@ -16,7 +16,7 @@ import re  # noqa: F401
 import six
 
 
-class InlineResponse200(object):
+class InlineResponse2004(object):
     """NOTE: This class is auto generated by OpenAPI Generator.
     Ref: https://openapi-generator.tech
 
@@ -31,7 +31,7 @@ class InlineResponse200(object):
                             and the value is json key in definition.
     """
     openapi_types = {
-        'resources': 'list[User]',
+        'resources': 'list[ParentBanks]',
         'pagination': 'InlineResponse200Pagination'
     }
 
@@ -41,7 +41,7 @@ class InlineResponse200(object):
     }
 
     def __init__(self, resources=None, pagination=None):  # noqa: E501
-        """InlineResponse200 - a model defined in OpenAPI"""  # noqa: E501
+        """InlineResponse2004 - a model defined in OpenAPI"""  # noqa: E501
 
         self._resources = None
         self._pagination = None
@@ -54,41 +54,41 @@ class InlineResponse200(object):
 
     @property
     def resources(self):
-        """Gets the resources of this InlineResponse200.  # noqa: E501
+        """Gets the resources of this InlineResponse2004.  # noqa: E501
 
 
-        :return: The resources of this InlineResponse200.  # noqa: E501
-        :rtype: list[User]
+        :return: The resources of this InlineResponse2004.  # noqa: E501
+        :rtype: list[ParentBanks]
         """
         return self._resources
 
     @resources.setter
     def resources(self, resources):
-        """Sets the resources of this InlineResponse200.
+        """Sets the resources of this InlineResponse2004.
 
 
-        :param resources: The resources of this InlineResponse200.  # noqa: E501
-        :type: list[User]
+        :param resources: The resources of this InlineResponse2004.  # noqa: E501
+        :type: list[ParentBanks]
         """
 
         self._resources = resources
 
     @property
     def pagination(self):
-        """Gets the pagination of this InlineResponse200.  # noqa: E501
+        """Gets the pagination of this InlineResponse2004.  # noqa: E501
 
 
-        :return: The pagination of this InlineResponse200.  # noqa: E501
+        :return: The pagination of this InlineResponse2004.  # noqa: E501
         :rtype: InlineResponse200Pagination
         """
         return self._pagination
 
     @pagination.setter
     def pagination(self, pagination):
-        """Sets the pagination of this InlineResponse200.
+        """Sets the pagination of this InlineResponse2004.
 
 
-        :param pagination: The pagination of this InlineResponse200.  # noqa: E501
+        :param pagination: The pagination of this InlineResponse2004.  # noqa: E501
         :type: InlineResponse200Pagination
         """
 
@@ -128,7 +128,7 @@ class InlineResponse200(object):
 
     def __eq__(self, other):
         """Returns true if both objects are equal"""
-        if not isinstance(other, InlineResponse200):
+        if not isinstance(other, InlineResponse2004):
             return False
 
         return self.__dict__ == other.__dict__
