# api/pybridge/models/inline_response200_pagination.py
@@ -16,7 +16,7 @@ import re  # noqa: F401
 import six
 
 
-class InlineResponse200(object):
+class InlineResponse200Pagination(object):
     """NOTE: This class is auto generated by OpenAPI Generator.
     Ref: https://openapi-generator.tech
 
@@ -31,68 +31,68 @@ class InlineResponse200(object):
                             and the value is json key in definition.
     """
     openapi_types = {
-        'resources': 'list[User]',
-        'pagination': 'InlineResponse200Pagination'
+        'previous_uri': 'str',
+        'next_uri': 'str'
     }
 
     attribute_map = {
-        'resources': 'resources',
-        'pagination': 'pagination'
+        'previous_uri': 'previous_uri',
+        'next_uri': 'next_uri'
     }
 
-    def __init__(self, resources=None, pagination=None):  # noqa: E501
-        """InlineResponse200 - a model defined in OpenAPI"""  # noqa: E501
+    def __init__(self, previous_uri=None, next_uri=None):  # noqa: E501
+        """InlineResponse200Pagination - a model defined in OpenAPI"""  # noqa: E501
 
-        self._resources = None
-        self._pagination = None
+        self._previous_uri = None
+        self._next_uri = None
         self.discriminator = None
 
-        if resources is not None:
-            self.resources = resources
-        if pagination is not None:
-            self.pagination = pagination
+        if previous_uri is not None:
+            self.previous_uri = previous_uri
+        if next_uri is not None:
+            self.next_uri = next_uri
 
     @property
-    def resources(self):
-        """Gets the resources of this InlineResponse200.  # noqa: E501
+    def previous_uri(self):
+        """Gets the previous_uri of this InlineResponse200Pagination.  # noqa: E501
 
 
-        :return: The resources of this InlineResponse200.  # noqa: E501
-        :rtype: list[User]
+        :return: The previous_uri of this InlineResponse200Pagination.  # noqa: E501
+        :rtype: str
         """
-        return self._resources
+        return self._previous_uri
 
-    @resources.setter
-    def resources(self, resources):
-        """Sets the resources of this InlineResponse200.
+    @previous_uri.setter
+    def previous_uri(self, previous_uri):
+        """Sets the previous_uri of this InlineResponse200Pagination.
 
 
-        :param resources: The resources of this InlineResponse200.  # noqa: E501
-        :type: list[User]
+        :param previous_uri: The previous_uri of this InlineResponse200Pagination.  # noqa: E501
+        :type: str
         """
 
-        self._resources = resources
+        self._previous_uri = previous_uri
 
     @property
-    def pagination(self):
-        """Gets the pagination of this InlineResponse200.  # noqa: E501
+    def next_uri(self):
+        """Gets the next_uri of this InlineResponse200Pagination.  # noqa: E501
 
 
-        :return: The pagination of this InlineResponse200.  # noqa: E501
-        :rtype: InlineResponse200Pagination
+        :return: The next_uri of this InlineResponse200Pagination.  # noqa: E501
+        :rtype: str
         """
-        return self._pagination
+        return self._next_uri
 
-    @pagination.setter
-    def pagination(self, pagination):
-        """Sets the pagination of this InlineResponse200.
+    @next_uri.setter
+    def next_uri(self, next_uri):
+        """Sets the next_uri of this InlineResponse200Pagination.
 
 
-        :param pagination: The pagination of this InlineResponse200.  # noqa: E501
-        :type: InlineResponse200Pagination
+        :param next_uri: The next_uri of this InlineResponse200Pagination.  # noqa: E501
+        :type: str
         """
 
-        self._pagination = pagination
+        self._next_uri = next_uri
 
     def to_dict(self):
         """Returns the model properties as a dict"""
@@ -128,7 +128,7 @@ class InlineResponse200(object):
 
     def __eq__(self, other):
         """Returns true if both objects are equal"""
-        if not isinstance(other, InlineResponse200):
+        if not isinstance(other, InlineResponse200Pagination):
             return False
 
         return self.__dict__ == other.__dict__
