# api/pybridge/models/parent_bank.py
@@ -16,7 +16,7 @@ import re  # noqa: F401
 import six
 
 
-class InlineResponse200(object):
+class ParentBank(object):
     """NOTE: This class is auto generated by OpenAPI Generator.
     Ref: https://openapi-generator.tech
 
@@ -31,68 +31,94 @@ class InlineResponse200(object):
                             and the value is json key in definition.
     """
     openapi_types = {
-        'resources': 'list[User]',
-        'pagination': 'InlineResponse200Pagination'
+        'name': 'str',
+        'logo_url': 'str',
+        'banks': 'list[Bank]'
     }
 
     attribute_map = {
-        'resources': 'resources',
-        'pagination': 'pagination'
+        'name': 'name',
+        'logo_url': 'logo_url',
+        'banks': 'banks'
     }
 
-    def __init__(self, resources=None, pagination=None):  # noqa: E501
-        """InlineResponse200 - a model defined in OpenAPI"""  # noqa: E501
+    def __init__(self, name=None, logo_url=None, banks=None):  # noqa: E501
+        """ParentBank - a model defined in OpenAPI"""  # noqa: E501
 
-        self._resources = None
-        self._pagination = None
+        self._name = None
+        self._logo_url = None
+        self._banks = None
         self.discriminator = None
 
-        if resources is not None:
-            self.resources = resources
-        if pagination is not None:
-            self.pagination = pagination
+        if name is not None:
+            self.name = name
+        if logo_url is not None:
+            self.logo_url = logo_url
+        if banks is not None:
+            self.banks = banks
 
     @property
-    def resources(self):
-        """Gets the resources of this InlineResponse200.  # noqa: E501
+    def name(self):
+        """Gets the name of this ParentBank.  # noqa: E501
 
 
-        :return: The resources of this InlineResponse200.  # noqa: E501
-        :rtype: list[User]
+        :return: The name of this ParentBank.  # noqa: E501
+        :rtype: str
         """
-        return self._resources
+        return self._name
 
-    @resources.setter
-    def resources(self, resources):
-        """Sets the resources of this InlineResponse200.
+    @name.setter
+    def name(self, name):
+        """Sets the name of this ParentBank.
 
 
-        :param resources: The resources of this InlineResponse200.  # noqa: E501
-        :type: list[User]
+        :param name: The name of this ParentBank.  # noqa: E501
+        :type: str
         """
 
-        self._resources = resources
+        self._name = name
 
     @property
-    def pagination(self):
-        """Gets the pagination of this InlineResponse200.  # noqa: E501
+    def logo_url(self):
+        """Gets the logo_url of this ParentBank.  # noqa: E501
 
 
-        :return: The pagination of this InlineResponse200.  # noqa: E501
-        :rtype: InlineResponse200Pagination
+        :return: The logo_url of this ParentBank.  # noqa: E501
+        :rtype: str
         """
-        return self._pagination
+        return self._logo_url
 
-    @pagination.setter
-    def pagination(self, pagination):
-        """Sets the pagination of this InlineResponse200.
+    @logo_url.setter
+    def logo_url(self, logo_url):
+        """Sets the logo_url of this ParentBank.
 
 
-        :param pagination: The pagination of this InlineResponse200.  # noqa: E501
-        :type: InlineResponse200Pagination
+        :param logo_url: The logo_url of this ParentBank.  # noqa: E501
+        :type: str
         """
 
-        self._pagination = pagination
+        self._logo_url = logo_url
+
+    @property
+    def banks(self):
+        """Gets the banks of this ParentBank.  # noqa: E501
+
+
+        :return: The banks of this ParentBank.  # noqa: E501
+        :rtype: list[Bank]
+        """
+        return self._banks
+
+    @banks.setter
+    def banks(self, banks):
+        """Sets the banks of this ParentBank.
+
+
+        :param banks: The banks of this ParentBank.  # noqa: E501
+        :type: list[Bank]
+        """
+
+        self._banks = banks
 
     def to_dict(self):
         """Returns the model properties as a dict"""
@@ -128,7 +154,7 @@ class InlineResponse200(object):
 
     def __eq__(self, other):
         """Returns true if both objects are equal"""
-        if not isinstance(other, InlineResponse200):
+        if not isinstance(other, ParentBank):
             return False
 
         return self.__dict__ == other.__dict__
